Add Reproduce scripts